2003-03-14  Dekel Tsur  <dekelts@tau.ac.il>

	* lyx2lyx/lyx2lyx (main): Handle development version files

2003-03-12  Angus Leeming  <leeming@lyx.org>

	* images/font-free.xpm: renamed as font-free-apply.xpm.

	* ui/default.ui: s/font-free/font-free-apply/

2003-03-12  Dekel Tsur  <dekelts@tau.ac.il>

	* lyx2lyx/lyx2lyx (main): Print error messages to stderr.

	* lyx2lyx/lyxconvert_218.py (change_infoinset): Convert correctly 
	notes with several lines and backslashes.

2003-03-12  John Levon  <levon@movementarian.org>

	* lyx2lyx/lyxconvert_221.py: add \\end_header

2003-03-11  Dekel Tsur  <dekelts@tau.ac.il>

	* lyx2lyx/lyxconvert_218.py (change_infoinset): Convert Info insets
	to Note insets.

2003-03-11  Matej Cepl  <matej@ceplovi.cz>

	* layouts/scrlttr2.layout: add Comment layout

2003-03-10  Michael Schmitt  <Michael.Schmitt@teststep.org>

	* configure.m4: fix the tgif converters

2003-03-10  Angus Leeming  <leeming@lyx.org>

	* scripts/lyxpreview2bitmap.sh: use variables for the names of
	'latex', 'dvips', 'gs' and 'pnmcrop' and move their definition to
	the top of the script.

	* scripts/lyxpreview2bitmap.sh: enable BAIL_OUT to print a message.

2003-03-10  Angus Leeming  <leeming@lyx.org>

	* images/graphics-insert.xpm: rename as
	dialog-show-new-inset_graphics.xpm.

2003-03-05  Angus Leeming  <leeming@lyx.org>

	* ui/default.ui: use 'dialog-show-new-inset "graphics"' instead
	of graphics-insert'.

2003-03-06  Serge Winitzki  <serge@cosmos.phy.tufts.edu>

	* bind/sciword.bind: update for 1.3.x 

2003-03-06  Dekel Tsur  <dekelts@tau.ac.il>

	* ui/default.ui: Add item for split env.

2003-03-05  Angus Leeming  <leeming@lyx.org>

	* ui/default.ui: use 'dialog-show-new-inset "external"' instead
	of 'external-insert'.
	use "dialog-show-new-inset include" instead of "buffer-child-insert".

2003-03-03  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* doc/LaTeXConfig.lyx.in: really get rid of iletter description
